--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vijit Singh | Data Analyst</title>
     <link rel="icon" type="image/jpg" href="/images/icon1.png" />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="vijitsingh/css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
