--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           <div class="col" align="center">
             <img
               class="img-fluid icon mt-5"
-              src="/images/profile1.png"
+              src="images/profile1.png"
               alt="Image of Vijit Singh"
             />
           </div>
