--- a/index.html
+++ b/index.html
@@ -264,13 +264,13 @@
         <div class="container d-block d-sm-none">
           <div class="row d-flex justify-content-center">
             <div class="col-2 size-skill-mobile">
-              <i class="fas fa-code code-mobile"></i>
+              <i class="fas fa-database code-mobile"></i>
             </div>
             <div class="col-2 size-skill-mobile">
-              <i class="fab fa-bootstrap bootstrap-mobile floating"></i>
+              <i class="fab fa-python bootstrap-mobile floating"></i>
             </div>
             <div class="col-2 size-skill-mobile">
-              <i class="fab fa-js-square js-mobile"></i>
+              <i class="fas fa-code js-mobile"></i>
             </div>
             <div class="col-2 size-skill-mobile">
               <i class="fab fa-github github-mobile"></i>
