--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
               <a class="nav-link active" href="#contact">Contact</a>
             </li>
             <li class="nav-item work-link d-none d-lg-block">
-              <a class="nav-link work-link-color" href="/contact.html"
+              <a class="nav-link work-link-color" href="/vijitsingh/contact.html"
                 >Work request <i class="fas fa-chevron-right ps-1"></i
               ></a>
             </li>
@@ -162,7 +162,7 @@
           <div class="col-3"></div>
           <div class="col-6" align="center">
             <a
-              href="/contact.html"
+              href="/vijitsingh/contact.html"
               class="nav-link work-link-color lets-work mb-3"
               >Let's work! ></a
             >
@@ -698,7 +698,7 @@
             Let's work together!
           </h3>
           <div class="col-12" align="center">
-            <form action="/contact.html">
+            <form action="/vijitsingh/contact.html">
               <button
                 type="submit"
                 value="Go to Contact page"
