--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>📧 Contact me - Vijit Singh - Data Analyst</title>
     <link rel="icon" type="image/jpg" href="/images/icon1.PNG" />
-    <link rel="stylesheet" href="vijitsingh/css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -37,7 +37,7 @@
           <div
             class="col-1 d-none d-sm-none d-md-none d-lg-block d-xl-none"
           ></div>
-          <a class="navbar-brand col-2 nav-name" href="/index.html">
+          <a class="navbar-brand col-2 nav-name" href="/vijitsingh/index.html">
             Vijit Singh</a
           >
           <button
@@ -76,7 +76,7 @@
                 <a class="nav-link active" href="/index.html#about">About me</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="/index.html#contact"
+                <a class="nav-link active" href="/vijitsingh/index.html#contact"
                   >Contact</a
                 >
               </li>
