--- a/index.html
+++ b/index.html
@@ -732,7 +732,7 @@
             class="footer-description"
             >Github</a
           >
-          <a href="vijitsingh95@gmail.com" class="footer-description"
+          <a href="mailto:vijitsingh95@gmail.com" class="footer-description"
             >Email</a
           >
           <a
