--- a/contact.html
+++ b/contact.html
@@ -63,17 +63,17 @@
                 <a
                   class="nav-link active"
                   aria-current="page"
-                  href="/index.html#services"
+                  href="/vijitsingh/index.html#services"
                   >Services</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="/index.html#projects"
+                <a class="nav-link active" href="/vijitsingh/index.html#projects"
                   >Projects</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="/index.html#about">About me</a>
+                <a class="nav-link active" href="/vijitsingh/index.html#about">About me</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" href="/vijitsingh/index.html#contact"
