--- a/contact.html
+++ b/contact.html
@@ -81,7 +81,7 @@
                 >
               </li>
               <li class="nav-item work-link d-none d-lg-block">
-                <a class="nav-link work-link-color" href="/index.html"
+                <a class="nav-link work-link-color" href="/vijitsingh/index.html"
                   ><i class="fas fa-chevron-left pe-1"></i> Back to main page
                 </a>
               </li>
