--- a/contact.html
+++ b/contact.html
@@ -95,7 +95,7 @@
           <div class="card padding-contact padding-body-contact">
             <div class="card-body">
               <div class="col-12 exit d-lg-none d-xl-none" align="end">
-                <a href="/index.html" class="link-email"
+                <a href="/vijitsingh/index.html" class="link-email"
                   ><i class="fas fa-times"></i
                 ></a>
               </div>
