--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vijit Singh | Data Analyst</title>
-    <link rel="icon" type="image/jpg/png" href="/images/icon1.png" />
+    <link rel="icon" type="image/jpg/png" href="images/icon1.png" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -710,7 +710,7 @@
              <button
                 class="btn btn-outline-primary"
                >
-                <a style="text-decoration:none" color: "white" href="./images/vijitDAresumeAe.pdf"> My Resume <i class="fas fa-chevron-right ps-1"></i>
+                <a style="text-decoration:none" href="./images/vijitDAresumeAe.pdf"> My Resume <i class="fas fa-chevron-right ps-1"></i>
                </button></a>
           </div>
         </div>
