--- a/index.html
+++ b/index.html
@@ -707,11 +707,13 @@
                 Contact me <i class="fas fa-chevron-right ps-1"></i>
               </button>
             </form>
+            <form action="./images/vijitDAresumeAes.pdf">
              <button
                 class="btn btn-outline-primary"
                >
-                <a style="text-decoration:none" href="./images/vijitDAresumeAe.pdf"> My Resume <i class="fas fa-chevron-right ps-1"></i>
+                My Resume <i class="fas fa-chevron-right ps-1"></i>
                </button></a>
+              </form>
           </div>
         </div>
       </div>
