--- a/index.html
+++ b/index.html
@@ -707,7 +707,7 @@
                 Contact me <i class="fas fa-chevron-right ps-1"></i>
               </button>
             </form>
-            <form action="/images/Vijitresume.pdf">
+            <form action="/images/vijitresume.pdf">
              <button
                 class="btn btn-outline-primary"
                >
