--- a/index.html
+++ b/index.html
@@ -141,13 +141,13 @@
           <!--Name Card for Mobile-->
           <div class="col-12">
             <h1 class="tittle d-sm-block d-md-none d-lg-block" align="center">
-              Data Analyst
+              Data Scientist
             </h1>
             <h2
               class="tittle-smaller d-none d-sm-none d-md-block d-lg-none"
               align="center"
             >
-              Data Analyst
+              Data Scientist
             </h2>
           </div>
           <div class="col-12 based-in" align="center">
@@ -551,7 +551,7 @@
                 <div class="card-body" align="center">
                   <h5 class="card-title card-purple">Experience</h5>
                   <p class="card-info">
-                    8 months of experience in Data Analsysis and Visualisation in MS Exel, SQL, Python and Tableau.
+                    More than 1 year of experience in Data Science and Analytics in Python, SQL, MS Exel and Tableau.
                   </p>
                 </div>
               </div>
@@ -565,7 +565,7 @@
                 <div class="card-body" align="center">
                   <h5 class="card-title card-purple">Experience</h5>
                   <p class="card-info">
-                    8 months of experience in Data Analsysis and Visualisation.
+                    More than 1 year of experience in Data Science and Analytics in Python, SQL, MS Exel and Tableau.
                   </p>
                 </div>
               </div>
@@ -578,7 +578,7 @@
                 <div class="card-body" align="center">
                   <h5 class="card-title card-purple">Experience</h5>
                   <p class="card-info">
-                    8 months of experience in Data Analsysis and Data Visualisation.
+                    More than 1 year of experience in Data Science and Analytics in Python, SQL, MS Exel and Tableau.
                   </p>
                 </div>
               </div>
