--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
         <!--New row-->
         <div class="col-1"></div>
         <div class="col-6">
-          <h3 class="tittle-services">A self-taught Data Analyst.</h3>
+          <h3 class="tittle-services">A self-taught Data Scientist.</h3>
         </div>
 
         <!--Icon-->
