--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vijit Singh | Data Analyst</title>
+    <title>Vijit Singh | Data Scientist</title>
     <link rel="icon" type="image/jpg/png" href="images/icon1.png" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -725,7 +725,7 @@
           <p class="footer-description">©2022 Vijit Singh</p>
         </div>
         <div class="col-2">
-          <p class="footer-description">Data Analyst, Data Scientist</p>
+          <p class="footer-description">Data Scientist, Data Analyst</p>
         </div>
         <div class="col-6" align="center">
           <a
